# aerial_models

./: CMakeLists.txt  package.xml
models/parrot_bebop/: model.config  model.sdf  model.urdf  model_lidar.sdf  model_pcd.sdf  parrot_bebop.urdf.xacro  uav_lidar.sdf
models/rmaluam/: model_camera.config  model_camera.sdf  uav_lidar.sdf  uav_manip.sdf
models/shelves_high2/: model.sdf
models/uamv0_description/: model.config  model.sdf
models/world_axis/: model.sdf
worlds/: empty.world  random_obstacles.world  small_warehouse.world  uam_gazebo_collision.world  uav_dynamic.world  uav_eight_obs.world  uav_empty.world  uav_five_obs.world  uav_four_obs.world  uav_nine_obs.world  uav_one_obs.world  uav_seven_obs.world  uav_six_obs.world  uav_test.world  uav_three_obs.world  uav_warehouse.world  warehouse.world
