<package format="3">
  <name>aerial_models</name>
  <version>0.0.0</version>
  <description>
    <p>URDF Description package for aerial robots</p>
    <p>This package contains configuration data, 3D models and launch files
for different aerial robots</p>
  </description>
  <author>Shaswat Garg</author>
  <maintainer email="sis_shaswat@outlook.com" />
  <license>MIT</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rosgraph_msgs</depend>
  <depend>urdf</depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>